# tinta

./: .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRADEMARKS.md  bun.lockb  changelogithub.config.json  index.html  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml
scripts/: release.ts
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tinta-updater.key.pub
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  pdf.rs  storage.rs
src/app/: router.tsx
src/composables/: apply-format-to-view.ts  create-app-shortcuts.ts  create-app-version.ts  create-codemirror.ts  create-dismiss.ts  create-editor-view.ts  create-image-resolver.ts  create-list-ui.ts  create-note-attachment-picker.ts  create-note-editor.ts  create-notes.ts  create-outline.ts  create-settings.ts  create-storage-folder.ts  create-tag-editor.ts  create-theme-sync.ts  create-tilt.ts  create-updater.ts  create-window-drag.ts  create-writing-stats.ts  create-zustand-selector.ts  editor-jump-signal.ts  info-panel-toggle-signal.ts  layout-context.ts  search-focus-signal.ts  updater-fake.util.ts  view-selection-adapter.ts
src/lib/: about.const.ts  editing-keyboard-shortcuts.const.ts  format-date.util.ts  keyboard-shortcuts.const.ts  markdown-mark.plugin.ts  markdown.util.ts  nav-items.const.ts  note-asset-src.util.ts  note-attachments.util.ts  note-export.util.ts  note-frontmatter.util.ts  note-pdf-content-style.const.ts  note-pdf-export.util.ts  note-pdf-style.const.ts  notes-fs.util.ts  outline.types.ts  outline.util.ts  pages.const.ts  storage-root.util.ts  templates.const.ts  writing-stats.types.ts  writing-stats.util.ts
src/pages/: AboutPage.tsx  AllNotesPage.tsx  KeyboardShortcutsPage.tsx  PlaceholderPage.tsx  SettingsPage.tsx  (+2 more)
(+69 files in other folders)
